--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,19 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 		
+		<!-- spirng security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-test</artifactId>
+		    <!-- <version>4.2.3.RELEASE</version> -->
+		    <scope>test</scope>
+		</dependency>
+		<!-- spirng security end -->
+		
 		<!-- spirng mvc -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
