--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-#mybatis.config-locations=classpath:mybatis/mybatis-config.xml/
- 
 spring:
   datasource:
     driverClassName: com.mysql.jdbc.Driver
@@ -10,16 +8,19 @@ spring:
     active: mybatis,dataSource
   output:
     ansi:
-      enabled: always
+      enabled: always #彩色日志
   http:
       multipart:
         location: /Users/jianghui/Downloads/temp-del
 debug: false
 server:
   jsp-servlet:
-    init-parameters:
+    init-parameters: #servlet启动参数
       a: 1
       b: 2
+#security:
+#  basic:
+#    authorize-mode: none #不启用spring security
 
 #https://docs.spring.io/spring-boot/docs/1.4.7.RELEASE/reference/htmlsingle/#boot-features-logging 26章
 #显式切换日志组件，默认是logback，logback的配置文件在spring发行包里是自带的，可以使用属性或者xml文件调整logback的配置
@@ -30,7 +31,3 @@ logging:
   
   
 
-#mybatisSpring.driverClassName = com.mysql.jdbc.Driver
-#mybatisSpring.url = jdbc:mysql://localhost:3306/bookshop?useUnicode=true&characterEncoding=utf-8
-#mybatisSpring.username = root
-#mybatisSpring.password = cpusky
