--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<version>5.0.8</version>
 			</dependency>
 		<!-- mybatis不整合spring end -->
 	</dependencies>
