--- a/src/main/resources/application-dataSource.properties
+++ b/src/main/resources/application-dataSource.properties
@@ -1,9 +1,26 @@
-# 驱动配置信息
+
+#数据库驱动
+datasource.driverClassName=com.mysql.jdbc.Driver
+
+
+#master数据源配置
+master.datasource.username=root
+master.datasource.password=admin
+master.datasource.url=jdbc:mysql://localhost:3306/bookshop?useUnicode=true&characterEncoding=utf8
+
+# cluster 数据源配置
+cluster.datasource.username=root	
+cluster.datasource.password=admin
+cluster.datasource.url=jdbc:mysql://localhost:3306/sampdb?useUnicode=true&characterEncoding=utf8
+
+
+
+# 连接池配置信息
 spring.druid.type=com.alibaba.druid.pool.DruidDataSource
 spring.druid.dbUrl = jdbc:mysql://127.0.0.1:3306/bookshop?useUnicode=true&characterEncoding=utf-8  
-spring.druid.username = root
-spring.druid.password = cpusky
-spring.druid.driverClassName = com.mysql.jdbc.Driver
+#spring.druid.username = root
+#spring.druid.password = cpusky
+#spring.druid.driverClassName = com.mysql.jdbc.Driver
 
 #连接池的配置信息
 ## 初始化大小，最小，最大
