--- a/src/main/resources/application-mybatis.properties
+++ b/src/main/resources/application-mybatis.properties
@@ -1,10 +1,10 @@
-mybatisSpring.driverClassName = com.mysql.jdbc.Driver
-mybatisSpring.url = jdbc:mysql://localhost:3306/bookshop?useUnicode=true&characterEncoding=utf-8
-mybatisSpring.username = root
-mybatisSpring.password = cpusky
-mybatisSpring.url.sampdb = jdbc:mysql://localhost:3306/sampdb?useUnicode=true&characterEncoding=utf-8
-mybatisSpring.username.sampdb = sampadm
-mybatisSpring.password.sampdb = secret
+#mybatisSpring.driverClassName = com.mysql.jdbc.Driver
+#mybatisSpring.url = jdbc:mysql://localhost:3306/bookshop?useUnicode=true&characterEncoding=utf-8
+#mybatisSpring.username = root
+#mybatisSpring.password = cpusky
+#mybatisSpring.url.sampdb = jdbc:mysql://localhost:3306/sampdb?useUnicode=true&characterEncoding=utf-8
+#mybatisSpring.username.sampdb = sampadm
+#mybatisSpring.password.sampdb = secret
  
 mybatis.type-aliases-package = com.sky.movie.mybatis.domain
 #mybatis.config-location = classpath:/com/sky/mybatis/mybatisSpringBoot/data/mybatis-config.xml
