新建一个数据库用户，整理数据库配置

--- a/src/main/resources/application-dataSource.properties
+++ b/src/main/resources/application-dataSource.properties
@@ -1,25 +1,26 @@
-
 #数据库驱动
 datasource.driverClassName=com.mysql.jdbc.Driver
 
+#新建数据库用户：
+#create user 'bookshopadm'@'localhost' identified by 'secret';
+#set password for 'bookshopadm'@'localhost' = password('bookshopdb');
+#grant all on bookshop.* to 'bookshopadm'@'localhost';
 
 #master数据源配置
-master.datasource.username=root
-master.datasource.password=admin
+master.datasource.username=bookshopadm
+master.datasource.password=bookshopdb
 master.datasource.url=jdbc:mysql://localhost:3306/bookshop?useUnicode=true&characterEncoding=utf8
 
 # cluster 数据源配置
-cluster.datasource.username=root	
-cluster.datasource.password=admin
+cluster.datasource.username=sampadm
+cluster.datasource.password=sampdb
 cluster.datasource.url=jdbc:mysql://localhost:3306/sampdb?useUnicode=true&characterEncoding=utf8
-
-
 
 # 连接池配置信息
 spring.druid.type=com.alibaba.druid.pool.DruidDataSource
 spring.druid.dbUrl = jdbc:mysql://127.0.0.1:3306/bookshop?useUnicode=true&characterEncoding=utf-8  
-#spring.druid.username = root
-#spring.druid.password = cpusky
+spring.druid.username = ${master.datasource.username}
+spring.druid.password = ${master.datasource.password}
 #spring.druid.driverClassName = com.mysql.jdbc.Driver
 
 #连接池的配置信息
