--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
-  datasource:
-    driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/bookshop?useUnicode=true&characterEncoding=utf-8
-    username: root
-    password: cpusky
+#  datasource: 数据源统一放到属性文件里配置了
+#    driverClassName: com.mysql.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/bookshop?useUnicode=true&characterEncoding=utf-8
+#    username: root
+#    password: cpusky
   profiles:
     active: mybatis,dataSource
   output:
