--- a/src/main/resources/application-dataSource.properties
+++ b/src/main/resources/application-dataSource.properties
@@ -18,7 +18,7 @@ cluster.datasource.url=jdbc:mysql://localhost:3306/sampdb?useUnicode=true&charac
 
 # 连接池配置信息
 spring.druid.type=com.alibaba.druid.pool.DruidDataSource
-spring.druid.dbUrl = jdbc:mysql://127.0.0.1:3306/bookshop?useUnicode=true&characterEncoding=utf-8  
+spring.druid.dbUrl = ${master.datasource.url}
 spring.druid.username = ${master.datasource.username}
 spring.druid.password = ${master.datasource.password}
 #spring.druid.driverClassName = com.mysql.jdbc.Driver
