--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>sky-allinone</name>
-	<description>一个大而全的工程，不考虑微服务什么的，纯属练手</description>
+	<description>一个大而全的工程，不考虑微服务什么的，示例各种知识点</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -107,21 +107,13 @@
 			<optional>true</optional>
 		</dependency>
 		
-		<!-- mybatis通用mapper，集成springboot，不是spring boot start -->
+		<!-- mybatis通用mapper，集成springboot，不是spring  start -->
 		<dependency>
 		    <groupId>tk.mybatis</groupId>
 		    <artifactId>mapper-spring-boot-starter</artifactId>
 		    <version>1.2.3</version>
 		</dependency>
-		<!-- mybatis通用mapper，集成springboot，不是spring boot end -->
-		
-		<!-- mybatis通用mapper，集成spring，不是spring boot start -->
-		<!-- <dependency>
-		    <groupId>tk.mybatis</groupId>
-		    <artifactId>mapper</artifactId>
-		    <version>3.4.6</version>
-		</dependency> -->
-		<!-- mybatis通用mapper，集成spring，不是spring boot end -->
+		<!-- mybatis通用mapper，集成springboot，不是spring  end -->
 		
 		<!-- mybatis分页插件 start -->
 		<dependency>
@@ -139,15 +131,13 @@
 		    <artifactId>mybatis-spring-boot-starter</artifactId>
 		    <version>1.3.2</version>
 		</dependency>
-		<!-- mybatis整合spring-boot end -->
-		
-		<!-- mybatis整合spring start -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-		<!-- mybatis整合spring end -->
+		<!-- mybatis整合spring-boot end -->
+		
 		
 		<!-- mybatis不整合spring start -->
 		<dependency>
