--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 		
-		<!-- spirng security -->
+		<!-- spirng security start -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
