--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 		
+		<!-- commons-lang工具类 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+		  <artifactId>commons-lang3</artifactId>
+		  <version>3.3.2</version>
+		</dependency>
+		
 		<!-- spirng redis -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
