--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 		
+		<!-- websocket -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		
 		<!-- hessian 远程RPC服务 -->
 		<dependency>
 			<groupId>com.caucho</groupId>
