--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,14 @@ spring:
     database: 1
   cache:
     type: redis #指定缓存使用redis，也可以不指定，默认会检测到
+  mail:
+    host: smtp.163.com
+    username: jianghui_job@163.com
+    password: joshui_hero&186
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
+      mail.smtp.starttls.required: true
 debug: true
 server:
   port: 8081
