--- a/pom.xml
+++ b/pom.xml
@@ -235,6 +235,9 @@
             <resource>
                 <directory>src/main/resources</directory>
             </resource>
+            <resource>
+                <directory>src/test/resources</directory>
+            </resource>
 		</resources>
 		<plugins>
 			<plugin>
