--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 		
+		<!-- kafka -->
+		<dependency>
+		  <groupId>org.springframework.kafka</groupId>
+		  <artifactId>spring-kafka</artifactId>
+		  <version>1.3.5.RELEASE</version>
+		</dependency>
+		
 		<!-- actuator -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
