--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 		
+		<!-- commons-io -->
+		<dependency>
+		    <groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		
 		<!-- kafka -->
 		<dependency>
 		  <groupId>org.springframework.kafka</groupId>
