--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -68,7 +68,8 @@ server:
 #显式切换日志组件，默认是logback，logback的配置文件在spring发行包里是自带的，可以使用属性或者xml文件调整logback的配置
 #见spring-boot-1.5.8包里的org.springframework.boot.logging.log4j2、org.springframework.boot.logging.logback、org.springframework.boot.logging.java等
 logging:
-  config: classpath:log4j2.xml
+#  config: classpath:log4j2.xml
+  config: classpath:log4j2-file.xml
 #  config: classpath:org/springframework/boot/logging/logback/base.xml
 
 #tk 通用mapper配置  
