--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,11 @@
 	<groupId>com.sky</groupId>
 	<artifactId>allinone</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<!-- 这里也可以打成可运行war包，jar -jar xx.war -->
 	<packaging>jar</packaging>
 
 	<name>sky-allinone</name>
-	<description>一个大而全的工程，不考虑微服务什么的，纯属练手</description>
+	<description>存储一下自己接触过的一些知识点，目的是直接拿到生产环境使用</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -28,6 +29,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+			<!-- 使用log4j2。还需引入spring-boot-starter-log4j2、修改配置文件指定使用log4j2 -->
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.boot</groupId>
@@ -69,6 +71,110 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 		
+		<!-- commons-io -->
+		<dependency>
+		    <groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		
+		<!-- kafka -->
+		<dependency>
+		  <groupId>org.springframework.kafka</groupId>
+		  <artifactId>spring-kafka</artifactId>
+		  <version>1.3.5.RELEASE</version>
+		</dependency>
+		
+		<!-- actuator -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		
+		<!-- mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		
+		<!-- websocket -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		
+		<!-- hessian 远程RPC服务 -->
+		<dependency>
+			<groupId>com.caucho</groupId>
+			<artifactId>hessian</artifactId>
+			<version>4.0.51</version>
+		</dependency>
+		
+		<!-- PDF工具类 start -->
+		<dependency>
+		    <groupId>com.itextpdf</groupId>
+		    <artifactId>itextpdf</artifactId>
+		    <version>5.5.6</version>
+		</dependency>
+		<!-- itextpdf的亚洲字体支持 -->
+		<dependency>
+		    <groupId>com.itextpdf</groupId>
+		    <artifactId>itext-asian</artifactId>
+		    <version>5.2.0</version>
+		</dependency>
+		<dependency>  
+		    <groupId>com.itextpdf.tool</groupId>  
+		    <artifactId>xmlworker</artifactId>  
+		    <version>5.4.1</version>  
+		</dependency> 
+		<dependency>  
+		    <groupId>org.jsoup</groupId>  
+		    <artifactId>jsoup</artifactId>  
+		    <version>1.10.1</version>  
+		</dependency> 
+		<!-- PDF工具类 end -->
+		
+		<!-- commons-lang工具类 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+		  <artifactId>commons-lang3</artifactId>
+		  <version>3.3.2</version>
+		</dependency>
+		
+		<!-- spirng redis -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		
+		<!-- spirng security start -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-test</artifactId>
+		    <!-- <version>4.2.3.RELEASE</version> -->
+		    <scope>test</scope>
+		</dependency>
+		<!-- spirng security end -->
+		
+		<!-- spirng mvc -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		
+		<!-- 内存数据库 -->
+		<dependency>
+	      <groupId>org.hsqldb</groupId>
+	      <artifactId>hsqldb</artifactId>
+	      <version>2.4.0</version>
+	      <!-- 并不是使用maven test来测试的，而是直接手动运行junit测试，所以这里去掉test scope -->
+	      <!-- <scope>test</scope> -->
+	    </dependency>
+		
 		<!-- Mybatis Generator -->
 		<dependency>
 			<groupId>org.mybatis.generator</groupId>
@@ -78,21 +184,13 @@
 			<optional>true</optional>
 		</dependency>
 		
-		<!-- mybatis通用mapper，集成springboot，不是spring boot start -->
+		<!-- mybatis通用mapper，集成springboot，不是spring  start -->
 		<dependency>
 		    <groupId>tk.mybatis</groupId>
 		    <artifactId>mapper-spring-boot-starter</artifactId>
 		    <version>1.2.3</version>
 		</dependency>
-		<!-- mybatis通用mapper，集成springboot，不是spring boot end -->
-		
-		<!-- mybatis通用mapper，集成spring，不是spring boot start -->
-		<!-- <dependency>
-		    <groupId>tk.mybatis</groupId>
-		    <artifactId>mapper</artifactId>
-		    <version>3.4.6</version>
-		</dependency> -->
-		<!-- mybatis通用mapper，集成spring，不是spring boot end -->
+		<!-- mybatis通用mapper，集成springboot，不是spring  end -->
 		
 		<!-- mybatis分页插件 start -->
 		<dependency>
@@ -110,15 +208,13 @@
 		    <artifactId>mybatis-spring-boot-starter</artifactId>
 		    <version>1.3.2</version>
 		</dependency>
-		<!-- mybatis整合spring-boot end -->
-		
-		<!-- mybatis整合spring start -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-		<!-- mybatis整合spring end -->
+		<!-- mybatis整合spring-boot end -->
+		
 		
 		<!-- mybatis不整合spring start -->
 		<dependency>
@@ -133,11 +229,30 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<!-- <version>5.0.8</version> -->
+			<!-- useSSL问题，把mysql驱动设个版本可以解决，或者是加上useSSl-false -->
 			</dependency>
 		<!-- mybatis不整合spring end -->
 	</dependencies>
 
 	<build>
+		<resources>
+			<!-- 加这个resourc，主要是因为在src/main/java有配置文件，否则不会将这些配置文件放入打好的jar里 -->
+			<resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                    <include>**/*.properties</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+            <resource>
+                <directory>src/test/resources</directory>
+            </resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -145,6 +260,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
