--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
-#  datasource: 数据源统一放到属性文件里配置了
+#  datasource: 数据源统一放到属性文件application-dataSource.properties里配置了
 #    driverClassName: com.mysql.jdbc.Driver
 #    url: jdbc:mysql://localhost:3306/bookshop?useUnicode=true&characterEncoding=utf-8
 #    username: root
@@ -34,6 +34,11 @@ spring:
     consumer:
       group-id: joshuiConsumerGroup
       auto-offset-reset: earliest #to ensure the new consumer group will get the messages we just sent, because the container might start after the sends have completed.
+#  data:
+#    elasticsearch: #如果不配置这个，就是用内嵌的es服务器
+#      cluster-nodes: localhost:9200
+#      repositories:
+#        enabled: false #这个开关决定是否实例化repository。如果这个开关为true，即使不加这个注解@EnableElasticsearchRepositories，repository依然会实例化，会导致去连接es服务器
 security: #actuator配置
   user:
     name: user
