--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,18 @@
 			<artifactId>druid</artifactId>
 			<version>1.1.9</version>
 		</dependency>
+
+		<!--引入excel解析-->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.17</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17</version>
+		</dependency>
 		
 		<!-- kafka -->
 		<dependency>
